application/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dummy-api
  name: dummy-api
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app.kubernetes.io/instance: dummy-api
    app.kubernetes.io/name: dummy-api
  sessionAffinity: None
  type: ClusterIP
