application/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummy-api 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: url
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dummy-api
            port:
              number: 8000
  - host: url
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: dummy-api
            port:
              number: 8000
